--- a/assets/css/general.scss
+++ b/assets/css/general.scss
@@ -174,6 +174,15 @@
 	position: relative;
 	top: 0;
 	left: 0;
+	& .flipbook{
+			@media screen and (max-width: $md) {
+			margin-left: 0px !important;
+		    margin-top: 50% !important;
+		    left: -180px !important;
+		    top: -300px !important;
+		}
+		    
+	}
 }
 .btnse-spa{
 	border-color:transparent;
