--- a/assets/css/general.scss
+++ b/assets/css/general.scss
@@ -451,6 +451,7 @@ background:transparent url('../img/Home_Imagen3.jpg') center center no-repeat;
 		text-decoration: none;
 		color:#fff;
 		font-family: $tpav;
+		font-size: 0.9rem;
 		padding:0.5rem 0.5rem;
 		border-radius: 1rem;
 		&:hover{
